--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,15 @@
 <div class="wrapper">
+  <div class="side-bar">
   <%= render "side_bar" %>
+  
+    <div class="side-header"></div>
+    <div class="rooms"></div>
+  </div>
+  <div class="main-chat">
   <%= render "main_chat" %>
+    
+    <div class="main-header"></div>
+    <div class="messages"></div>
+    <div class="main-form"></div>
+  </div>
 </div>
