チャット画面のフロント実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -38,6 +38,7 @@
   height: calc(100vh - 100px);
   background-color: #2f3e51;
   padding: 0 20px;
+  overflow: scroll;
 }
 
 .room {
@@ -58,16 +59,102 @@
   height: 100px;
   background-color: #ffffff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-header-name {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.main-header-btn {
+  margin-top: 40px;
+}
+
+.main-header-btn a {
+  color: darkred;
+  border: 1px solid darkred;
+  padding: 20px;
+  text-decoration: none;
 }
 
 .messages {
   height: calc(100vh - 190px);
   background-color: #fafafa;
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.message {
+  margin: 10px 0;
+}
+
+.upper-message{
+  display: flex;
+}
+
+.message-user {
+  color: #434a54;
+  font-size: 16px;
+}
+
+.message-date {
+  color: #999;
+  font-size: 12px;
+  padding-left: 10px;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
 }
 
 .main-form {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+}
+
+.form-contents {
+  background-color: #dddddd;
+  width: 100%;
+  display: flex;
+}
+
+.text-content {
+  background-color:white;
+  padding-left: 10px;
+  width: 100%;
+  border: none;
+}
+
+.send-btn {
+  background-color: #38aef0;
+  font-size: 16px;
+  color: white;
+  padding: 0 20px;
+  height: 50px;
+  margin-left: 15px;
+  border: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
