ユーザー情報表示に関する修正

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,7 +1,7 @@
   
 <div class="side-header">
   <div class="header-name">
-    <%= link_to currrent_user.name, edit_user_path(current_user) %>
+    <%= link_to current_user.name , edit_user_path(current_user) %>
   </div>
   <div class="chat-creates">
     <a href="#">チャットを作成する</a>
