--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -116,26 +116,27 @@
   margin-bottom: 40px;
 }
 
-.main-form {
+.form {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
-}
-
-.form-contents {
-  background-color: #dddddd;
-  width: 100%;
   display: flex;
 }
 
-.text-content {
-  background-color:white;
+.form-input {
+  background-color: white;
+  display: flex;
+  width: 100%;
+}
+
+.form-message {
   padding-left: 10px;
   width: 100%;
   border: none;
+  height: 50px;
 }
 
-.send-btn {
+.form-submit {
   background-color: #38aef0;
   font-size: 16px;
   color: white;
