--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -44,13 +44,13 @@
     </div>
   </div>
 </div>
-<div class="main-form">
-  <div class="form-contents">
-    <input type="text" placeholder="type a message" class="text-content">
+<%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f| %>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>
-    <input type="submit" value="送信" class="send-btn">
   </div>
-</div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
