メッセージの表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="main-header">
   <div class="left-header">
     <div class="main-header-name">
-    hogehuga
+      <%= @room.name %>
     </div>
   </div>
 
